--- a/about.html
+++ b/about.html
@@ -30,6 +30,10 @@
       </li>
       <li>you can only use 50 <em>unique</em> words in the process.</li>
     </ol>
+    <blockquote>
+      And to clarify &mdash; the point is not to overwrite and cut back...rather, write “up to” the 200 words. - George
+    </blockquote>
+
     The website keeps track of time, word count, and unique word count. We use a simple method to determine words:
     space/punctuation separation.
     </p>
