--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>unique word count: <span id="uniqueWordCount">0</span></div>
     <div>time remaining: <span id="timeRemaining">45:00</span></div>
     <div>
-      <button id="playButton">play</button>
+      <button id="playButton">start</button>
       <button id="pauseButton" class="hidden">pause</button>
       <button id="clearButton">clear</button>
     </div>
