--- a/about.html
+++ b/about.html
@@ -28,14 +28,15 @@
       <li>Write a 200-word story. But (and here’s the trick), it has to be <em>exactly</em> 200 words long (not 199, not
         201)
       </li>
-      <li>you can only use 50 <em>unique</em> words in the process.</li>
+      <li>You can only use 50 <em>unique</em> words in the process.</li>
     </ol>
     <blockquote>
       And to clarify &mdash; the point is not to overwrite and cut back...rather, write “up to” the 200 words. - George
     </blockquote>
-
-    The website keeps track of time, word count, and unique word count. We use a simple method to determine words:
-    space/punctuation separation.
+    </p>
+    <p>
+      The website keeps track of time, word count, and unique word count. We use a simple method to determine/separate
+      words, but hopefully it'll be easier than manually keeping track of each word.
     </p>
     <p>
       Created by <a href="https://longest.voyage">Jamie Crisman</a>
