--- a/about.html
+++ b/about.html
@@ -7,7 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <title>200/50</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="apple-mobile-web-app-title" content="200/50">
+  <meta name="application-name" content="200/50">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta property="og:title" content="200/50: About" />
+  <meta property="og:description" content="A writing exercise from George Saunders." />
+  <title>200/50: About</title>
 </head>
 
 <body>
@@ -17,8 +27,8 @@
   </nav>
   <article id="content">
     <p>
-      Exercise from <a href="https://georgesaunders.substack.com">George Saunder's Story Club</a>. (Related entries: <a
-        href="https://georgesaunders.substack.com/p/the-opposite-of-worry">The Opposite of Worry</a> and <a
+      Exercise from <a href="https://georgesaunders.substack.com">Story Club with George Saunders</a>. (Related entries:
+      <a href="https://georgesaunders.substack.com/p/the-opposite-of-worry">The Opposite of Worry</a> and <a
         href="https://georgesaunders.substack.com/p/the-20050-exercise">The 200/50 Exercise</a>)
     </p>
     <p>
@@ -37,6 +47,10 @@
     <p>
       The website keeps track of time, word count, and unique word count. We use a simple method to determine/separate
       words, but hopefully it'll be easier than manually keeping track of each word.
+    </p>
+    <p>
+      Nothing you write on here is shared or uploaded anywhere. It'll try to auto-save to your browser just in case you
+      accidentally refresh the page. This website is not affiliated with George Saunders. I just like Story Club.
     </p>
     <p>
       Created by <a href="https://longest.voyage">Jamie Crisman</a>
